--- a/challenges.Rmd
+++ b/challenges.Rmd
@@ -23,7 +23,7 @@ Big Shiny Apps usually means that several peoples will work on the application. 
 
 ### Making the app production ready
 
-This includes two things: scaling and maintaining. As said in the disclaimer, I won't expand on the topic of scaling, as many have written about that, but here is one piece of advice: make the R process running the app do as less as possible, and in particular prevent it from doing what it's not supposed to do. Which includes: use JavaScript so that the client browser renders things (instead of making R do the work — basic JS is easy to learn), use parallelization and async, and if possible, make the heavy lifting be done outside the R session running the app. 
+This includes two things: scaling and maintaining. As said in the disclaimer, I won't expand on the topic of scaling, as many have written about that, but here is one piece of advice: make the R process running the app do as little as possible, and in particular prevent it from doing what it's not supposed to do. Which includes: use JavaScript so that the client browser renders things (instead of making R do the work — basic JS is easy to learn), use parallelization and async, and if possible, make the heavy lifting be done outside the R session running the app. 
 
 Maintainance, on the other, is something to think about from the beginning.  It includes being able to ensure that the application will work on the long run, and that new features can be easily implemented. 
 
