--- a/tools.Rmd
+++ b/tools.Rmd
@@ -2,7 +2,7 @@
 
 ## Package
 
-Shiny Apps are to be put into a package. Why? Because it allows them to be documented, tested, and can be installed in several environment. 
+Shiny Apps are to be put into a package. Why? Because it allows them to be documented, tested, and installed in different environments. 
 
 ## Git
 
@@ -21,7 +21,7 @@ These two tools allow you to prototype a Shiny App and to go "UI first". Learn m
 
 ## CI and testing
 
-Testing is central for making your application survive on the long run. The {testthat} package can be used to test the "business logic" side of your app, while the application features can be tested with packages like {shinytest}, or software like Katalon. 
+Testing is central for making your application survive in the long run. The {testthat} package can be used to test the "business logic" side of your app, while the application features can be tested with packages like {shinytest}, or software like Katalon. 
 
 ## Deploy
 
