--- a/big-shiny.Rmd
+++ b/big-shiny.Rmd
@@ -1,3 +1,5 @@
+# (PART) Building Shiny Apps {-}
+
 # About Big Shiny Apps {#bigshinyapp}
 
 If you're reading this page, chances are you already know what a Shiny App is — a web application that communicates with R, built in R, and working with R. Almost anybody can create a prototype for a small data product in a matter of hours. And no knowledge of HTML, CSS or JavaScript is required, making it really easy to use — you can rapidly create a POC. But what to do now you want to build a big Shiny App?
