--- a/index.Rmd
+++ b/index.Rmd
@@ -9,9 +9,11 @@ link-citations: yes
 description: "Building Big Shiny Apps - A Workflow"
 ---
 
-> Disclaimer: this book is still at a Work in Progress stage.
+# Disclaimer
 
-# Motivation
+This book is still at a Work in Progress stage.
+
+## Motivation
 
 The idea behind this book is not to talk about how to deploy and scale, but about the process of building the app. Why? Lots of blog posts and books talk about putting apps in production. Very few talks about working on building these apps. This is why I choose to talk about the process, workflow, and tools we use at ThinkR when building big Shiny Apps.
 
