little index update

--- a/index.Rmd
+++ b/index.Rmd
@@ -15,6 +15,21 @@ This book is still at a Work in Progress stage.
 
 ## Motivation
 
-The idea behind this book is not to talk about how to deploy and scale, but about the process of building the app. Why? Lots of blog posts and books talk about putting apps in production. Very few talks about working on building these apps. This is why I choose to talk about the process, workflow, and tools we use at ThinkR when building big Shiny Apps.
+This book will not __get you started with Shiny__, nor __talk about how to deploy into production and scale your app__. What we'll see is __the process of building the app__. Why? Lots of blog posts and books talk about starting to use shiny or putting apps in production. Very few (if any) talk about this grey area between getting started and pushing into production. 
 
-So, to sum up, we'll not talk about what to do when the app is ready, we'll talk about how to make it ready.
+So this is what this book is gonna talk about: building Shiny application. We'll focus on the process, the workflow, and the tools we use at ThinkR when building big Shiny Apps.
+
+Hence, if you're starting to read this book, we assume you have a working knowledge of how to build a small application, and want to know how to go one step further. 
+
+## Other resources 
+
+### Getting started with Shiny 
+
++ [Learn Shiny with RStudio](https://shiny.rstudio.com/tutorial/)
++ [Getting Started with Shiny](https://ourcodingclub.github.io/2017/03/07/shiny.html)
++ [(WIP) Mastering Shiny](https://github.com/jcheng5/shiny-book)
+
+### Shiny into production 
+
++ [Shiny in production: Principles, practices, and tools](https://resources.rstudio.com/rstudio-conf-2019/shiny-in-production-principles-practices-and-tools-joe-cheng)
++ [Shiny in Production](https://kellobri.github.io/shiny-prod-book/)
