restructured the book

--- a/challenges.Rmd
+++ b/challenges.Rmd
@@ -1,6 +1,6 @@
 # Challenges {#challenges}
 
-## Finding a good UI (and stick with it)
+## Designing the UI
 
 Choosing a UI is hard — we have a natural tendency, as coders, to be focused on the backend, i.e the algorithmic part of the application. But let's state the truth: no matter how complex and innovative your backend can be, your application is bad if your UI is bad. That's the hard truth. If people can't understand how to use your application, your application doesn't work. No matter how incredible the backend is. 
 
@@ -21,9 +21,13 @@ Big Shiny Apps usually mean that several people will work on the application. Fo
 + List the tasks, and open one issue for each task on your version control system. Each issue will be solved in a separate branch. 
 + Finally, assign one module to one developer — if it seems that working on one module is a two-person job, divide again into two other submodules. This is a relatively complex task, as the output of one module influences the input of another, so be sure to assign them well. 
 
-### Making the app production ready
+## Making the app production ready
+
+### Scaling
 
 This includes two things: scaling and maintaining. As said in the disclaimer, I won't expand on the topic of scaling, as many have written about that, but here is one piece of advice: make the R process running the app do as little as possible, and in particular prevent it from doing what it's not supposed to do. Which includes: use JavaScript so that the client browser renders things (instead of making R do the work — basic JS is easy to learn), use parallelization and async, and if possible, make the heavy lifting be done outside the R session running the app. 
+
+### Maintaining
 
 Maintainance, on the other hand, is something to think about from the beginning.  It includes being able to ensure that the application will work in the long run, and that new features can be easily implemented. 
 
