--- a/index.Rmd
+++ b/index.Rmd
@@ -17,9 +17,19 @@ This book is still at a Work in Progress stage.
 
 This book will not __get you started with Shiny__, nor __talk about how to deploy into production and scale your app__. What we'll see is __the process of building the app__. Why? Lots of blog posts and books talk about starting to use shiny or putting apps in production. Very few (if any) talk about this grey area between getting started and pushing into production. 
 
-So this is what this book is gonna talk about: building Shiny application. We'll focus on the process, the workflow, and the tools we use at ThinkR when building big Shiny Apps.
+So this is what this book is going to talk about: building Shiny application. We'll focus on the process, the workflow, and the tools we use at ThinkR when building big Shiny Apps.
 
 Hence, if you're starting to read this book, we assume you have a working knowledge of how to build a small application, and want to know how to go one step further. 
+
+## Book structure 
+
++ Part 1 (Building big Shiny Apps) gives a general context about what is a big Shiny Apps and what challenges arise when you're dealing with a big application. 
+
++ Part 2 (Step by Step) describes a series of steps you can take when you want to build a big Shiny App. 
+
++ Part 3 (Tools) introduces various tools you can use: notably the `{golem}` package.
+
++ Part 4 (Optimizing) tackles the question of optimization, first by presenting some common caveats of big Shiny Apps, and then showing how to optimize R code, and use JavaScript to lighten R work.
 
 ## Other resources 
 
