--- a/prototyping-fakir-shinipsum.Rmd
+++ b/prototyping-fakir-shinipsum.Rmd
@@ -1,8 +1,11 @@
-# Tools {#tools}
+# Prototyping {#proto}
 
-## {shinipsum} and {fakir}:
+These two tools allow you to prototype a Shiny App and to go "UI first". Learn more: 
 
-These two tools allow you to prototype a Shiny App and to go "UI first". Learn more : 
+## {shinipsum}
 
 + https://github.com/ThinkR-open/shinipsum
+
+## {fakir}
+
 + https://github.com/ThinkR-open/fakir
