--- a/step-by-step.Rmd
+++ b/step-by-step.Rmd
@@ -1,6 +1,6 @@
-# Step by step {#stepbystep}
+# (PART) Step by step {-}
 
-## Step 1: Designing
+# Step 1: Designing {#step-design} 
 
 Don’t rush into coding. I know you want to, because it’s what we like to do and what we are good at. But before entering the coding marathon, take time to think about the application and the way it will be deployed and used. Take a pen and a piece of paper and draw the app. Talk about it with the people who will use the app, just to decipher what they actually need. Take a moment to talk with the IT. Here are some questions you can ask:
 
@@ -15,7 +15,7 @@ Asking questions, taking notes, and drawing the app help you have a good idea of
 
 So, next step!
 
-## Step 2: Prototype 
+# Step 2: Prototype {#step-protopype} 
 
 I like to go “UI first”. For two main reasons:
 
@@ -28,15 +28,16 @@ Hence, once you’ve got a draft of your app on a piece of paper, you can then m
 
 Another package that can be used to do that is `{fakir}`. This package is designed to create fake data frames, primarily for teaching purposes, but it can also be used for inserting data into a shiny prototype.
 
-## Step 3: Build
+# Step 3: Build {#step-build}
 
-Now the UI and the features are set, time to work on the backend 🎉
+Now the UI and the features are set, time to work on the backend.
 
 This part is pretty standard — everybody can now work on the implementation of the functions that process the app inputs, in their own modules. As the UI, functionalities and modules have been defined in the previous steps, everyone (well, in theory) knows what they have to work on.
 
-And also, as said before, there should be no “surprise implementation”, as the app has been well defined before.
+And also, as said before, there should be no "surprise implementation", as the app has been well defined before.
 
-## Step 4: Secure
+
+# Step 4: Secure {#step-secure}
 
 Securing your app means two things: testing, and locking the application environment.
 
@@ -48,8 +49,9 @@ One other tool I like to use is Katalon Studio. It’s not R related, and can be
 
 Secondly, secure your app means that it can be deployed again any time in the future — in other words, you have to ensure you’ve got a proper handle on the required R version, and of the package versions which are required to run your app. That means that you have to be aware that upgrading a package might break your app — so, provide an environment that can prevent your app from breaking when a package gets updated. For that, there is, of course, Docker, R specific tools like `{packrat}`, or deploying custom CRAN repositories or package manager.
 
-## Step 5: Deploy
+# Step 5: Deploy {#step-deploy}
 
 Tools for deployment are not the subject of this blog post so I won’t talk about this in detail (remember, we are talking about building 😉 ), but our two tools of choice are Docker & ShinyProxy, and RStudio Connect.
+
 
 
