added a link in the intro

--- a/index.Rmd
+++ b/index.Rmd
@@ -38,6 +38,7 @@ Hence, if you're starting to read this book, we assume you have a working knowle
 + [Learn Shiny with RStudio](https://shiny.rstudio.com/tutorial/)
 + [Getting Started with Shiny](https://ourcodingclub.github.io/2017/03/07/shiny.html)
 + [(WIP) Mastering Shiny](https://github.com/jcheng5/shiny-book)
++ [A gRadual intRoduction to Shiny](https://laderast.github.io/gradual_shiny/)
 
 ### Shiny into production 
 
