--- a/index.Rmd
+++ b/index.Rmd
@@ -44,3 +44,5 @@ Hence, if you're starting to read this book, we assume you have a working knowle
 
 + [Shiny in production: Principles, practices, and tools](https://resources.rstudio.com/rstudio-conf-2019/shiny-in-production-principles-practices-and-tools-joe-cheng)
 + [Shiny in Production](https://kellobri.github.io/shiny-prod-book/)
+
+[Suggest a Resource!](https://github.com/ThinkR-open/building-shiny-apps-workflow/issues)
