--- a/prototyping-fakir-shinipsum.Rmd
+++ b/prototyping-fakir-shinipsum.Rmd
@@ -4,8 +4,12 @@ These two tools allow you to prototype a Shiny App and to go "UI first". Learn m
 
 ## {shinipsum}
 
+// TODO
+
 + https://github.com/ThinkR-open/shinipsum
 
 ## {fakir}
+
+// TODO
 
 + https://github.com/ThinkR-open/fakir
