--- a/step-by-step.Rmd
+++ b/step-by-step.Rmd
@@ -53,5 +53,4 @@ Secondly, secure your app means that it can be deployed again any time in the fu
 
 Tools for deployment are not the subject of this blog post so I won’t talk about this in detail (remember, we are talking about building 😉 ), but our two tools of choice are Docker & ShinyProxy, and RStudio Connect.
 
-
-
+// TODO: link to resources.
