--- a/tools.Rmd
+++ b/tools.Rmd
@@ -2,16 +2,24 @@
 
 ## Package
 
-Shiny Apps are to be put into a package. Why? Because it allows them to be documented, tested, and installed in different environments. 
+We believe that Shiny Apps are to be put into a package. Why? Because it allows them to be documented, tested, and can be installed in several environments.
+
+Also, think about your last Shiny app that wasn’t in a package. It’s an `app.R`, maybe with a folder you’re sourcing and which contains functions (let’s say in a` R/` folder). Maybe you’ve written some meta information (let’s call it a `DESCRIPTION`), and some tests you’ve put in a `tests/` folder. Also, as you want to be sure to do the things right, you’ve put documentation in your functions. Do you see where I’m heading? Yes, you’ve written an R package.
 
 ## Git
 
 Friends don't let friends work on a coding project without version control. 
 
+// TO DO
+
 ## Shiny modules
 
 Shiny modules are crucial tools when it comes to building big shiny apps: they allow to collaborate, to split the work into pieces, they facilitate testing, and they allow implementation of new features to be made more easily. 
 
+// TO DO: develop more and link to resources
+
 ## CI and testing
 
 Testing is central for making your application survive in the long run. The {testthat} package can be used to test the "business logic" side of your app, while the application features can be tested with packages like {shinytest}, or software like Katalon. 
+
+// TO DO: more info about the tools + link to resources.
