--- a/challenges.Rmd
+++ b/challenges.Rmd
@@ -6,6 +6,8 @@ Choosing a UI is hard — we have a natural tendency, as coders, to be focused o
 
 Try to find a simple, and efficient UI. One that people can understand and use in a matter of seconds. Don't implement features or visual elements that are not actually needed, just "in case". And spend time working on that UI, really thinking about what visual elements you are implementing. 
 
+// TODO: Find resources about simplicity in UI/UX design
+
 ## Working as a team
 
 Big Shiny Apps usually mean that several people will work on the application. For example, at ThinkR, 3 to 4 people usually work on the application. So, how do we organize that?
@@ -27,9 +29,13 @@ Big Shiny Apps usually mean that several people will work on the application. Fo
 
 This includes two things: scaling and maintaining. As said in the disclaimer, I won't expand on the topic of scaling, as many have written about that, but here is one piece of advice: make the R process running the app do as little as possible, and in particular prevent it from doing what it's not supposed to do. Which includes: use JavaScript so that the client browser renders things (instead of making R do the work — basic JS is easy to learn), use parallelization and async, and if possible, make the heavy lifting be done outside the R session running the app. 
 
+// TODO: link to resources.
+
 ### Maintaining
 
 Maintainance, on the other hand, is something to think about from the beginning.  It includes being able to ensure that the application will work in the long run, and that new features can be easily implemented. 
 
 + Working in the long run: separate the code with "business logic" (aka the data manipulation and the algorithm, that can work outside the context of the app) from the code building the application. That way, you can write regression tests for these functions to ensure they are stable. 
 + Implement new elements: as we are working with modules, it's easy to insert new elements inside the global application. 
+
+// TO DO: be more precise on the tooling. 
