--- a/golem.Rmd
+++ b/golem.Rmd
@@ -12,7 +12,6 @@ For now, `{golem}` can only be found on GitHub (but it should be on CRAN soon), 
 remotes::install_github("Thinkr-open/golemn")
 ```
 
-
 `{golem}` is an R package that implements an opinionated framework for building production-ready Shiny apps. It all starts with an RStudio project, which contains a predefined setup for building your app. The idea is that with `{golem}`, you don’t have to focus on the foundation of your app, and can spend your time thinking about what you want to do, not about how to do it. It’s built on top of the working process we’ve developed at ThinkR, and tries to gather in one place the functions and tools we’ve created for building applications designed for production.
 
 ## Getting started with `{golem}`
@@ -282,11 +281,15 @@ The `dev/03_deploy.R` file contains function for deploying on various plateforms
 
 ### RStudio Connect
 
+To create an `app.R` ready to be deployed on RStudio Connect, run:
+
 ```{r eval = FALSE}
 golem::add_rconnect_file()
 ```
 
 ### Docker 
+
+You can create a generic Dockerfile, or one which is plateform specific (for now, only ShinyProxy and Heroku are supported).
 
 ```{r eval = FALSE}
 # If you want to deploy via a generic Dockerfile
