added wanna help to index

--- a/index.Rmd
+++ b/index.Rmd
@@ -31,6 +31,10 @@ Hence, if you're starting to read this book, we assume you have a working knowle
 
 + Part 4 (Optimizing) tackles the question of optimization, first by presenting some common caveats of big Shiny Apps, and then showing how to optimize R code, and use JavaScript to lighten R work.
 
+## Wanna help? 
+
+Any feedbacks on the book is very welcome. Feel free to [open an issue](https://github.com/ThinkR-open/building-shiny-apps-workflow/issues), or to make a PR if you spot a typo (I'm not a native english speaker, so there might be some waiting to be found ;) ).
+
 ## Other resources 
 
 ### Getting started with Shiny 
