--- a/golem.Rmd
+++ b/golem.Rmd
@@ -7,7 +7,7 @@ It can be found at https://github.com/ThinkR-open/golem
 For now, `{golem}` can only be found on GitHub (but it should be on CRAN soon), so you have to install it with:
 
 ```{r eval = FALSE}
-remotes::install_github("Thinkr-open/golemn")
+remotes::install_github("Thinkr-open/golem")
 ```
 
 `{golem}` is an R package that implements an opinionated framework for building production-ready Shiny apps. It all starts with an RStudio project, which contains a predefined setup for building your app. The idea is that with `{golem}`, you don’t have to focus on the foundation of your app, and can spend your time thinking about what you want to do, not about how to do it. It’s built on top of the working process we’ve developed at ThinkR, and tries to gather in one place the functions and tools we’ve created for building applications designed for production.
