--- a/golem.Rmd
+++ b/golem.Rmd
@@ -32,7 +32,7 @@ If you want to do it through command line, you can use:
 golem::create_shiny_template(path = "path/to/package")
 ```
 
-This command allows you to create "illegally-named" package (for example, `1234`) by passing the `check_name` argument to `FALSE`. Note that this is not recommanded and __should only be done if you know what you are doing__.
+This command allows you to create "illegally-named" package (for example, `1234`) by passing the `check_name` argument to `FALSE`. Note that this is not recommended and __should only be done if you know what you are doing__.
 
 Once you've got that, a new RStudio project will be launched. Here is the structure of this project:
 
