--- a/golem.Rmd
+++ b/golem.Rmd
@@ -60,7 +60,7 @@ myapp.Rproj
 ```
 ]
 
-If you're already familiar with R pacakges, most of these files will appear very familiar to you. That's because a `{golem}` app IS a package.
+If you're already familiar with R packages, most of these files will appear very familiar to you. That's because a `{golem}` app IS a package.
 
 + `DESCRIPTION` & `NAMESPACE`: Package meta-data.
 
