--- a/golem.Rmd
+++ b/golem.Rmd
@@ -58,13 +58,13 @@ myapp.Rproj
   ¦--app_ui.R           
   ¦--run_app.R      
 ```
-]
+
 
 If you're already familiar with R packages, most of these files will appear very familiar to you. That's because a `{golem}` app IS a package.
 
 + `DESCRIPTION` & `NAMESPACE`: Package meta-data.
 
-+ `dev/`: Scripts that will be used along the process of developping your app. 
++ `dev/`: Scripts that will be used along the process of developing your app. 
 
 + `inst/app`: You'll add external dependencies in `www` (images, css, etc). Don't touch `app_ui` and `app_server`.
 
