--- a/challenges.Rmd
+++ b/challenges.Rmd
@@ -4,11 +4,41 @@
 
 Choosing a UI is hard — we have a natural tendency, as coders, to be focused on the backend, i.e the algorithmic part of the application. But let's state the truth: no matter how complex and innovative your backend can be, your application is bad if your UI is bad. That's the hard truth. If people can't understand how to use your application, your application doesn't work. No matter how incredible the backend is. 
 
+### Thinking about accessibility
+
+A user interface needs to be "ready to be consumed" by the broader audience possible. That means people with visual, mobility, or cognitive disabilities. 
+
+Web Accessibility is pretty standard concept in the web development world, and you can learn about this straight from the first chapter of [learn.freecodecamp.org](https://learn.freecodecamp.org/). 
+-> Screen to speech technology : html semantic tags
+-> Mobility impairment, people w/ parkinson for example. Exemple of the text input & ENTER button. Making things keyboard friendly. 
+-> ColorBlind, viridis
+
+
+### "Don't make me think" 
+
+Two contexts for using a shiny app : professional context or for fun. In both : people want the app to be useable, and easily usable. Work : don't want to lose time figuring out how to use the app. Fun : if you don't understand in a matter of minutes how to use the app, you'll stop using it. 
+
+-> KISS principle
+-> "Don't make me think" 
+
 Try to find a simple, and efficient UI. One that people can understand and use in a matter of seconds. Don't implement features or visual elements that are not actually needed, just "in case". And spend time working on that UI, really thinking about what visual elements you are implementing. 
+
+-> "Self explanatory"
+
+> All kinds of things on a Web page can make us stop and think unnecessarily. Take names, for example. Typical culprits are cute or clever names, marketing-induced names, company-specific names, and unfamiliar technical names
+
+-> If things are clickable, it has to look clickable
+
+> "As a user, I should never have to devote a millisecond of thought to whether
+things are clickable—or not" 
+
+-> Restrain reactivity 
+
+-> Not everything needs to be interactive plots 
 
 // TODO: Find resources about simplicity in UI/UX design
 
-## Working as a team
+## Working as a team: tools & organisation
 
 Big Shiny Apps usually mean that several people will work on the application. For example, at ThinkR, 3 to 4 people usually work on the application. So, how do we organize that?
 
