--- a/index.Rmd
+++ b/index.Rmd
@@ -9,11 +9,11 @@ link-citations: yes
 description: "Building Big Shiny Apps - A Workflow"
 ---
 
-# Disclaimer
+# Introduction {-}
 
 This book is still at a Work in Progress stage.
 
-## Motivation
+## Motivation {-}
 
 This book will not __get you started with Shiny__, nor __talk about how to deploy into production and scale your app__. What we'll see is __the process of building the app__. Why? Lots of blog posts and books talk about starting to use shiny or putting apps in production. Very few (if any) talk about this grey area between getting started and pushing into production. 
 
@@ -21,7 +21,7 @@ So this is what this book is going to talk about: building Shiny application. We
 
 Hence, if you're starting to read this book, we assume you have a working knowledge of how to build a small application, and want to know how to go one step further. 
 
-## Book structure 
+## Book structure {-}
 
 + Part 1 (Building big Shiny Apps) gives a general context about what is a big Shiny Apps and what challenges arise when you're dealing with a big application. 
 
@@ -31,11 +31,15 @@ Hence, if you're starting to read this book, we assume you have a working knowle
 
 + Part 4 (Optimizing) tackles the question of optimization, first by presenting some common caveats of big Shiny Apps, and then showing how to optimize R code, and use JavaScript to lighten R work.
 
-## Wanna help? 
+## About the authors {-}
+
+// TODO 
+
+## Want to help? {-}
 
 Any feedbacks on the book is very welcome. Feel free to [open an issue](https://github.com/ThinkR-open/building-shiny-apps-workflow/issues), or to make a PR if you spot a typo (I'm not a native english speaker, so there might be some waiting to be found ;) ).
 
-## Other resources 
+## Other resources {-}
 
 ### Getting started with Shiny 
 
