--- a/prototyping-fakir-shinipsum.Rmd
+++ b/prototyping-fakir-shinipsum.Rmd
@@ -1,14 +1,14 @@
-# Prototyping {#proto}
+# Tools for prototyping {#proto}
 
 These two tools allow you to prototype a Shiny App and to go "UI first". Learn more: 
 
-## {shinipsum}
+## Fast prototyping with `{shinipsum}`
 
 // TODO
 
 + https://github.com/ThinkR-open/shinipsum
 
-## {fakir}
+## Using `{fakir}` for fake data generation
 
 // TODO
 
