--- a/structure.Rmd
+++ b/structure.Rmd
@@ -1,6 +1,4 @@
-# (PART) Tools {-}
-
-# Structuring your App Project {#structure}
+# Structuring your Project {#structure}
 
 ## Shiny App as a Package
 
@@ -216,10 +214,6 @@ You'll get the Dockerfile you need with `golem::add_dockerfile()`.
 + [Writing R Extensions](https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Creating-R-packages)
 
 + [R package primer - a minimal tutorial](https://kbroman.org/pkg_primer/)
-
-## Understanding `{golem}` package structure
-
-// TODO
 
 ## Using Shiny Modules
 
